# clojure_compiler_ffi_bridge

./: .metadata  CHANGELOG.md  LICENSE  README.md  bridge.proto  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
lib/: clojure_compiler_bridge.dart  token.dart  utils.dart
macos/: clojure_compiler_bridge.podspec  clojure_compiler_ffi_bridge.podspec
macos/Classes/: bridge.cpp  bridge.h  bridge.pb.cc  bridge.pb.h  bridge_gen.h  core.cpp  core.h  environment.cpp  environment.h  lib.cpp  lib.h  printer.cpp  printer.h  reader.cpp  reader.h  types.cpp  types.h  utils.cpp  utils.h
macos/Libraries/: libprotobuf.dylib
src/: CMakeLists.txt  clojure_compiler_ffi_bridge.c
